[tool.poetry]
name = "gjallarhorn"
version = "0.0.2"
description = "A TaskWarrior Notification System"
authors = ["James Reid <4808760+YR-ZR0@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tasklib = "^2.4.3"
pytimeparse = "^1.1.8"
APScheduler = "^3.9.1"
SQLAlchemy = "^1.4.37"
watchdog = "^2.1.8"
flask = "^2.3.2"
click = "^8.1.6"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
mypy = "^1.4.1"
prospector = "^1.10.2"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
